# PseudoCal

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  cascade.py  evaluate.py  index.html  precompute_pseudolidar.py  pyproject.toml  train.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  secret-scan.yml
configs/: cascade.yaml  train.yaml
configs/data/: kitti_m.yaml  kitti_pillars.yaml  kitti_s.yaml
configs/depth/: depth_anything.yaml  dummy.yaml  glpn.yaml
configs/experiment/: debug.yaml  default.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: pseudopillars.yaml  pseudopillars_clsreg.yaml  pseudopillars_scale.yaml  unical_m.yaml  unical_s.yaml
deploy/local/: train_local.sh
deploy/vast/: README.md  download_kitti.sh  provision.sh  run_all.sh  train_vast.sh
docs/: index.html
notebooks/: demo.ipynb
src/pseudocal/: __init__.py  metrics.py  pillars.py  pseudolidar.py  scale.py
src/pseudocal/cascade/: __init__.py  runner.py
src/pseudocal/data/: __init__.py  datamodule.py  dataset.py
src/pseudocal/depth/: __init__.py  base.py  depth_anything.py  dummy.py  glpn.py
src/pseudocal/losses/: __init__.py  euler.py  yaw_cls.py
src/pseudocal/models/: __init__.py  pseudopillars.py  pseudopillars_clsreg.py  spatial_backbone.py  yaw_head.py
tests/: conftest.py  helpers.py  test_cascade.py  test_configs.py  test_datamodule.py  test_dataset.py  test_depth.py  test_euler_loss.py  test_metrics.py  test_pillars.py  test_pseudolidar.py  test_pseudopillars.py  test_scale.py  test_spatial_backbone.py  test_yaw_head.py
