[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pseudocal"
version = "0.1.0"
description = "PseudoCal: initialisation-free camera-LiDAR extrinsic calibration via pseudo-LiDAR pillars"
readme = "README.md"
license = {text = "CC BY-NC 4.0"}
requires-python = ">=3.11"
keywords = [
    "camera-lidar calibration",
    "extrinsic calibration",
    "sensor fusion",
    "pseudo-lidar",
    "monocular depth",
    "PointPillars",
    "MobileViT",
    "autonomous driving",
    "KITTI",
    "deep learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: Free for non-commercial use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # UniCal++ provides the MobileViT backbone, regression head, losses, metrics,
    # geometry/Transform helpers and the KITTI dataset that PseudoCal reuses. The two
    # refinement stages (UniCal-M / UniCal-S) ARE the UniCal module from this package.
    "unical-plus @ git+https://github.com/mcocheteux/unical-plus.git",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "pytorch-lightning>=2.2.0",
    "transformers>=4.45.0",  # DepthAnythingForDepthEstimation (metric variants)
    "einops>=0.7.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "scipy>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/mcocheteux/pseudocal"
Repository = "https://github.com/mcocheteux/pseudocal"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]
logger = [
    "wandb>=0.16.0",
    "tensorboard>=2.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pseudocal"]

[tool.hatch.metadata]
# Allow the unical-plus git (direct reference) dependency in the wheel metadata.
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
